--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -34,7 +34,7 @@ li a {
     border-bottom-right-radius: 10px;
 }
 #navigationBar {
-    margin-left:570px;
+    margin-left: 35%;
     position: absolute;
     margin-top: -10px;
     font-family: Georgia;
@@ -52,7 +52,7 @@ img {
     height: auto;
 }
 #name {
-    font-family: Forte;
+    font-family: Forte, cursive;
     font-weight: bold;
     font-size: 4em;
     margin-top: 100px;
@@ -72,4 +72,11 @@ img {
 	width:47%;
 	padding: 1%;
 	border: 2px solid black;
+}
+.codeblock {
+    font-family: Monospace;
+}
+#content {
+    border: 2px solid black;
+    padding: 1%;
 }
